--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -34,7 +34,7 @@
   html{
     font-size: 62.5%;
     overflow-x: hidden;
-    scroll-behavior: smooth;
+       scroll-behavior: smooth;
     scroll-padding-top: 6rem;
   }
   
@@ -591,7 +591,7 @@ html::-webkit-scrollbar{
 .histori{
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 50vh;
   background: #fafafa;
   display: flex;
   align-items: center;
@@ -599,6 +599,7 @@ html::-webkit-scrollbar{
   flex-direction: column;
   padding: 2rem 0;
 }
+
 
 .histori-transaksi table{
   position: absolute;
@@ -614,6 +615,7 @@ html::-webkit-scrollbar{
   overflow: hidden;
  
  }
+
 .histori-transaksi td , th{
   padding: 4rem 7rem;
   text-align: center;
@@ -848,7 +850,45 @@ html::-webkit-scrollbar{
   margin-bottom: 0;
 }
 
+@media (max-width: 768px) {
+  header .navbar a{
+    font-size: 1.2rem;
+    margin-left: 2rem;
+    color:var(--white);
+  }
+  
+  .histori h3{
+    font-size: 4rem;
+  }
+  .histori h1{
+    font-size: 2.5rem;
+  }
+  .histori-transaksi td , th{
+    padding: 1rem 1rem;
+    text-align: center;
+    font-size: 2rem;
+   }
+  header .logo{
+    margin-left: 0;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    color:var(--white);
+  }
+}
+
+
 @media (max-width:420px) {
+
+  .histori-transaksi h3,h1{
+    font-size: 3rem;
+  }
+  
+  .histori-transaksi td , th{
+    padding: 1rem 2rem;
+    text-align: center;
+    font-size: 2rem;
+   }
+
   .info .form .inputfield{
     flex-direction: column;
     align-items: flex-start;
